more work on the bot and recipe scraping

--- a/image_classification_model_fruits_veg.ipynb
+++ b/image_classification_model_fruits_veg.ipynb
@@ -779,7 +779,10 @@
    "outputs": [],
    "source": [
     "labels = test_df.class_names\n",
-    "labels_df = pd.DataFrame(labels)"
+    "labels_df = pd.DataFrame(labels)\n",
+    "labels_df.columns =['ingredient']\n",
+    "labels_df\n",
+    "labels_df.to_csv('labels.csv')"
    ]
   },
   {
