--- a/image_classification_model.ipynb
+++ b/image_classification_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-08 11:51:28.335856: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-04-09 18:39:09.066348: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -106,7 +106,7 @@
    "source": [
     "# creatnig the training, testing and validation \n",
     "train_df = image_dataset_from_directory(\n",
-    "    directory = 'food_data/output/train',\n",
+    "    directory = '../Jay-branch/food_data/output/train',\n",
     "    labels = 'inferred',\n",
     "    label_mode = 'categorical',\n",
     "    seed = 5,\n",
@@ -119,7 +119,7 @@
     "    )\n",
     "\n",
     "test_df = image_dataset_from_directory(\n",
-    "    directory = 'food_data/output/test',\n",
+    "    directory = '../Jay-branch/food_data/output/test',\n",
     "    labels = 'inferred',\n",
     "    label_mode = 'categorical',\n",
     "    seed = 5,\n",
@@ -130,7 +130,7 @@
     "    )\n",
     "\n",
     "val_df = image_dataset_from_directory(\n",
-    "    directory = 'food_data/output/val',\n",
+    "    directory = '../Jay-branch/food_data/output/val',\n",
     "    labels = 'inferred',\n",
     "    label_mode = 'categorical',\n",
     "    seed = 5,\n",
@@ -139,6 +139,19 @@
     "    batch_size = 32 ,\n",
     "    image_size = (100,100)\n",
     "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_148 = test_df.class_names\n",
+    "labels_148_df = pd.DataFrame(labels_148)\n",
+    "labels_148_df.columns =['ingredient']\n",
+    "labels_148_df\n",
+    "labels_148_df.to_csv('labels_148.csv')"
    ]
   },
   {
@@ -490,6 +503,327 @@
    "source": [
     "model.predict(val_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import spoonacular as sp\n",
+    "import random\n",
+    "words = ['onions' , 'steak' , 'garlic' , 'lemons' , 'parcley']\n",
+    "api = sp.API(\"73d3d61221c4417abdd341e716cf62ce\")\n",
+    "recipes = api.search_recipes_by_ingredients(words).json()\n",
+    "random = random.randint(0,len(recipes))\n",
+    "output = recipes[random -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 644758,\n",
+       " 'title': 'Glazed Pearl Onions',\n",
+       " 'image': 'https://spoonacular.com/recipeImages/644758-312x231.jpg',\n",
+       " 'imageType': 'jpg',\n",
+       " 'usedIngredientCount': 1,\n",
+       " 'missedIngredientCount': 2,\n",
+       " 'missedIngredients': [{'id': 19296,\n",
+       "   'amount': 1.0,\n",
+       "   'unit': 'Tsp',\n",
+       "   'unitLong': 'Tsp',\n",
+       "   'unitShort': 'tsp',\n",
+       "   'aisle': 'Nut butters, Jams, and Honey',\n",
+       "   'name': 'honey',\n",
+       "   'original': '1 Tsp. honey',\n",
+       "   'originalName': 'honey',\n",
+       "   'meta': [],\n",
+       "   'image': 'https://spoonacular.com/cdn/ingredients_100x100/honey.png'},\n",
+       "  {'id': 1022068,\n",
+       "   'amount': 2.0,\n",
+       "   'unit': 'Tbsp',\n",
+       "   'unitLong': 'Tbsps',\n",
+       "   'unitShort': 'Tbsp',\n",
+       "   'aisle': 'Oil, Vinegar, Salad Dressing',\n",
+       "   'name': 'red wine vinegar',\n",
+       "   'original': '2 Tbsp. red wine vinegar',\n",
+       "   'originalName': 'red wine vinegar',\n",
+       "   'meta': ['red'],\n",
+       "   'image': 'https://spoonacular.com/cdn/ingredients_100x100/red-wine-vinegar.jpg'}],\n",
+       " 'usedIngredients': [{'id': 10411282,\n",
+       "   'amount': 1.0,\n",
+       "   'unit': 'cup',\n",
+       "   'unitLong': 'cup',\n",
+       "   'unitShort': 'cup',\n",
+       "   'aisle': 'Produce',\n",
+       "   'name': 'red pearl onions',\n",
+       "   'original': '1 cup red pearl onions',\n",
+       "   'originalName': 'red pearl onions',\n",
+       "   'meta': ['red'],\n",
+       "   'image': 'https://spoonacular.com/cdn/ingredients_100x100/red-pearl-onions.jpg'}],\n",
+       " 'unusedIngredients': [],\n",
+       " 'likes': 1}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can make ** Round Steak and Gravy ** with you list provided and here is how to make it: \n",
+      "Preheat oven to 325 degrees F (165 degrees C).\n",
+      "Combine flour, paprika, onion powder, and garlic powder in a resealable plastic bag; shake to mix. Add beef a few pieces at a time and shake to coat.\n",
+      "Heat oil in a Dutch oven over medium-high heat. Add beef and brown on both sides, 5 to 7 minutes. Transfer beef to a baking pan and keep warm.\n",
+      "Saute onion in the beef drippings in the Dutch oven; cook until tender, about 5 minutes. Stir in cream of chicken soup, beef broth, water, and pepper. Bring gravy to a boil. Remove from heat.\n",
+      "Pour gravy over beef in the baking pan. Cover with aluminum foil.\n",
+      "Bake in the preheated oven until tender, about 2 hours.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import random\n",
+    "import requests as rq \n",
+    "import json\n",
+    "from recipe_scrapers import scrape_me\n",
+    "\n",
+    "\n",
+    "\n",
+    "url = 'https://www.allrecipes.com/search/results/?search=&IngIncl=onion&IngIncl=pepper&IngIncl=steak&IngIncl=garlic'\n",
+    "\n",
+    "request = rq.get(url)\n",
+    "\n",
+    "soup = BeautifulSoup(request.text , 'html.parser')\n",
+    "\n",
+    "recipes = []\n",
+    "\n",
+    "for a in soup.find_all('a', href=True):\n",
+    "    recipes.append(a['href'])\n",
+    "\n",
+    "recipes_df  = pd.DataFrame(recipes)\n",
+    "recipes_df.columns = ['url']\n",
+    "recipes_df = recipes_df.loc[recipes_df['url'].str.contains('/recipe/') ]\n",
+    "recipes_df.reset_index(inplace=True)\n",
+    "\n",
+    "random = random.randint(0,len(recipes_df))\n",
+    "scrape = scrape_me(recipes_df['url'][random]) \n",
+    "title = scrape.title()\n",
+    "instructions = scrape.instructions()\n",
+    "\n",
+    "\n",
+    "print(f'You can make ** {title} ** with you list provided and here is how to make it: \\n{instructions}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'calories': '285.2 calories',\n",
+       " 'carbohydrateContent': '10.7 g',\n",
+       " 'cholesterolContent': '63.5 mg',\n",
+       " 'fatContent': '15.2 g',\n",
+       " 'fiberContent': '0.7 g',\n",
+       " 'proteinContent': '25.1 g',\n",
+       " 'saturatedFatContent': '4.4 g',\n",
+       " 'sodiumContent': '380.6 mg',\n",
+       " 'sugarContent': '1 g'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrape.nutrients()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      []\n",
+       "1      []\n",
+       "2      []\n",
+       "3      []\n",
+       "4      []\n",
+       "       ..\n",
+       "424    []\n",
+       "425    []\n",
+       "426    []\n",
+       "427    []\n",
+       "428    []\n",
+       "Name: url, Length: 429, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "recipes_df['url'].str.findall(re.compile(r'/recipe/'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrape = scrape_me('https://www.allrecipes.com/recipe/12123/apple-cranberry-and-pear-crisp/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2 Rome Beauty apples - peeled, cored, and cubed',\n",
+       " '2 Comice pears - peeled, cored, and cubed',\n",
+       " '½ cup dried cranberries',\n",
+       " '1 tablespoon all-purpose flour',\n",
+       " '2 tablespoons honey',\n",
+       " '1 ½ tablespoons lemon juice',\n",
+       " '½ cup all-purpose flour',\n",
+       " '½ cup packed brown sugar',\n",
+       " '½ cup quick cooking oats',\n",
+       " '¼ cup ground walnuts',\n",
+       " '½ cup butter']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrape.ingredients()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "could not scrape:#main-content\n",
+      "could not scrape:/\n",
+      "could not scrape:/\n",
+      "could not scrape:#\n",
+      "could not scrape:/account/signup?regSource=3907&returnURL=%2F\n",
+      "could not scrape:https://x.specialoffers.meredith.com/ats/show.aspx?cr=588&fm=293&regSource=3700\n",
+      "could not scrape:https://websupport.meredith.com/\n",
+      "could not scrape:/account/signin?returnURL=https://www.allrecipes.com/my/shopping-lists/&regSource=3906&context_action=View%20Shopping%20List&custom_dek=Sign%20up%20to%20view%20your%20account%27s%20shopping%20list.\n",
+      "could not scrape:https://dish.allrecipes.com/ask-the-community/\n",
+      "could not scrape:/account/profile\n",
+      "could not scrape:/account/profile#/collections\n",
+      "could not scrape:https://websupport.meredith.com/\n",
+      "could not scrape:/account/signout\n",
+      "could not scrape:https://dish.allrecipes.com/ask-the-community/\n",
+      "could not scrape:/account/signin?regSource=3907&returnURL=%2F\n",
+      "could not scrape:https://www.magazine.store/allrecipes-magazine/?utm_source=allrecipes.com&utm_medium=owned&utm_campaign=i910arr1w1811\n",
+      "could not scrape:/\n",
+      "could not scrape:/\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n",
+      "could not scrape:https://www.allrecipes.com/recipes/215/salad/pasta-salad/\n",
+      "could not scrape:#\n",
+      "could not scrape:#\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in recipes_df['url']:\n",
+    "    try:\n",
+    "        scrape = scrape_me(i)\n",
+    "    except:\n",
+    "        print(f'could not scrape:{i}')\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                         #main-content\n",
+       "1                                                     /\n",
+       "2                                                     /\n",
+       "3                                                     #\n",
+       "4             https://www.allrecipes.com/account/signin\n",
+       "                             ...                       \n",
+       "425                https://www.meredith.com/nmg/privacy\n",
+       "426                https://www.meredith.com/legal/terms\n",
+       "427                  https://www.meredith.com/adchoices\n",
+       "428                                  javascript:void(0)\n",
+       "429    https://www.meredith.com/legal/web-accessibility\n",
+       "Name: url, Length: 430, dtype: object"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
