few updates to the telegram bot ( comments and cleanup )

--- a/image_classification_model.ipynb
+++ b/image_classification_model.ipynb
@@ -405,9 +405,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/h4/m4qlztkx7ljd8rgkq9h9bwpr0000gn/T/ipykernel_37461/2731244352.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#save the model for reuse and comparing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#saving the traning history of the latest model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/trainHistoryDict'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile_pi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_pi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#save the model for reuse and comparing \n",
     "model.save('model4')\n",
@@ -577,7 +589,7 @@
     }
    ],
    "source": [
-    "output"
+    "output['id']"
    ]
   },
   {
@@ -606,9 +618,15 @@
     "import json\n",
     "from recipe_scrapers import scrape_me\n",
     "\n",
+    "ingredients = ['onions' , 'steak' , 'garlic' , 'lemons' , 'parcley']\n",
     "\n",
+    "sentence = \"&IngIncl=\"\n",
+    "http_start = 'https://www.allrecipes.com/search/results/?search='\n",
     "\n",
-    "url = 'https://www.allrecipes.com/search/results/?search=&IngIncl=onion&IngIncl=pepper&IngIncl=steak&IngIncl=garlic'\n",
+    "ingredients = [sentence + i  for i in ingredients]\n",
+    "ingredients = \"\".join(ingredients)\n",
+    "ingredients\n",
+    "url = http_start + ingredients\n",
     "\n",
     "request = rq.get(url)\n",
     "\n",
@@ -635,30 +653,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'calories': '285.2 calories',\n",
-       " 'carbohydrateContent': '10.7 g',\n",
-       " 'cholesterolContent': '63.5 mg',\n",
-       " 'fatContent': '15.2 g',\n",
-       " 'fiberContent': '0.7 g',\n",
-       " 'proteinContent': '25.1 g',\n",
-       " 'saturatedFatContent': '4.4 g',\n",
-       " 'sodiumContent': '380.6 mg',\n",
-       " 'sugarContent': '1 g'}"
+       "'https://www.allrecipes.com/search/results/?search=&IngIncl=onions&IngIncl=steak&IngIncl=garlic&IngIncl=lemons&IngIncl=parcley'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scrape.nutrients()\n"
+    "ingredients = ['onions' , 'steak' , 'garlic' , 'lemons' , 'parcley']\n",
+    "\n",
+    "sentence = \"&IngIncl=\"\n",
+    "http_start = 'https://www.allrecipes.com/search/results/?search='\n",
+    "\n",
+    "ingredients = [sentence + i  for i in ingredients]\n",
+    "ingredients = \"\".join(ingredients)\n",
+    "ingredients\n",
+    "url = http_start + ingredients\n",
+    "\n",
+    "url\n"
    ]
   },
   {
