--- a/image_classification_model_fruits_veg.ipynb
+++ b/image_classification_model_fruits_veg.ipynb
@@ -206,14 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert images png to jpeg format "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Define the model architecture"
+    "## Define the model architecture and fitting the model"
    ]
   },
   {
@@ -267,11 +260,11 @@
     "# The model will be a multi layer Conv2D and Maxpooling with Dropouts to help prevent overfitting , towrds the end 1 Dens layer will be there before our final output\n",
     "model = Sequential()\n",
     "#layer 1,2,3 sequence \n",
-    "model.add(Conv2D(filters= 2, kernel_size=(3,3),activation='relu',input_shape = (100, 100, 3)))\n",
+    "model.add(Conv2D(filters= 32, kernel_size=(3,3),activation='relu',input_shape = (100, 100, 3)))\n",
     "model.add(MaxPooling2D((2,2)))\n",
     "model.add(Dropout(0.2))\n",
     "#layer 4,5,6 sequence \n",
-    "model.add(Conv2D(filters= 4, kernel_size=(3,3),activation='relu'))\n",
+    "model.add(Conv2D(filters= 64, kernel_size=(3,3),activation='relu'))\n",
     "model.add(MaxPooling2D((2,2)))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
@@ -552,13 +545,6 @@
     "    pickle.dump(history.history, file_pi)\n",
     "    \n",
     "model_json = model.to_json()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## loading previous models to use"
    ]
   },
   {
